--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 
 </head>
 <body id="top">
-<p>Nakag test</p>
+<div class="box1">
+BOX1
+</div>
+<div class="box2">
+BOX2
+</div>
+<div class="box3">
+BOX3
+</div>
+<div class="box4">
+BOX4
+</div>
 </body>
 </html>
