add javascripts tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>NAKAG test site</title>
 <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
+<script type="text/javascript" src="javascritpts/test.js"></script>
 </head>
 <body id="top">
 <div class="box1">
